--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>CI/CD Test</title>
 </head>
 <body>
-    <h1>CI/CD test 작업자 : 김조훈</h1>
+    <h1>CI/CD test 작업자 : 김조훈 2025-02-03 15:05 </h1>
 </body>
 </html>
